@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: imap4.h,v $
-// Revision      : $Revision: 1.10 $
-// Revision date : $Date: 2004/12/29 21:27:02 $
+// Revision      : $Revision: 1.11 $
+// Revision date : $Date: 2004/12/30 23:58:55 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -80,6 +80,7 @@ public:
 	gboolean parse_bodystructure (std::string, class PartInfo &,
 									gboolean toplevel=true);
 	gboolean parse_bodystructure_parameters (std::string, class PartInfo &);
+	void command_capability (void) throw (imap_err);
 	std::vector<int> command_searchnotseen (void) throw (imap_err);
 	void reset_tag();
 	std::string tag();
